--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,79 @@ html, body {
   height: 100%;
 }
 
+p, ul, h1, h2, h3, h4, h5 {
+  margin: 0;
+  padding: 0;
+  font-size: 1em;
+}
+
+.board {
+  width: 90%;
+  height: 100vh;
+  max-width: 800px;
+  margin: 0 auto;
+  display: table;
+}
+
+.board .inner {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.board .img-cont {
+  width: 100%;
+  position: relative;
+  display: block;
+}
+
+.board .img-cont img {
+  display: block;
+  width: 100%;
+  height: auto;
+  box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.1);
+}
+
+.board .img-cont .hover-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  color: white;
+  opacity: 0;
+  transition: opacity 0.33s ease;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.board .img-cont:hover .hover-cover {
+  opacity: 1;
+}
+
+.board .notes {
+  margin: auto;
+  text-align: center;
+}
+
+.board .notes h1 {
+  font-size: 2.33em;
+  font-weight: 200;
+}
+
+.board .notes ul {
+  list-style-type: none;
+  font-family: courier;
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+.board .notes li {
+  margin: 1.33em 0;
+}
+
 .loader {
   position: fixed;
   width: 100vw;
@@ -30,20 +103,20 @@ html, body {
   animation: loader-wave 3s infinite;
 }
 
-.loader svg path:nth-of-type(1) {
-  animation-delay: 0.2s;
-}
-.loader svg path:nth-of-type(2) {
-  animation-delay: 0.0s;
-}
-.loader svg path:nth-of-type(3) {
-  animation-delay: -0.2s;
+.loader svg path:nth-of-type(5) {
+  animation-delay: -2.9s;
 }
 .loader svg path:nth-of-type(4) {
-  animation-delay: -0.4s;
+  animation-delay: -3.0s;
 }
-.loader svg path:nth-of-type(5) {
-  animation-delay: -0.6s;
+.loader svg path:nth-of-type(3) {
+  animation-delay: -3.1s;
+}
+.loader svg path:nth-of-type(2) {
+  animation-delay: -3.2s;
+}
+.loader svg path:nth-of-type(1) {
+  animation-delay: -3.3s;
 }
 
 @keyframes loader-wave {
@@ -73,5 +146,29 @@ html, body {
   }
   100% {
     opacity: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .board {
+    height: auto;
+    padding: 40px 0;
+  }
+
+  .board .img-cont .hover-cover {
+    position: relative;
+    display: block;
+    color: black;
+    opacity: 1;
+    background: rgba(0,0,0,0);
+    margin: 40px 0;
+  }
+
+  .board .notes h1 {
+    font-size: 2em;
+  }
+
+  .board .notes ul {
+    max-width: none;
   }
 }
